Java8 Compatibility Issue Fixedv2